[project]
name = "joepedia-stream-index"
version = "0.0.1"
requires-python = ">= 3.13"
dependencies = ["docopt-ng>=0.9.0", "requests>=2.32.5"]

[project.optional-dependencies]
download = ["google-api-python-client>=2.179.0"]
wiki = ["pwiki>=1.3.1"]

[dependency-groups]
dev = ["pyright>=1.1.404", "ruff>=0.12.10"]
