[project]
name = "joepedia-stream-index"
version = "0.0.1"
requires-python = ">= 3.13"
dependencies = [
    "docopt-ng>=0.9.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5"
]

[project.optional-dependencies]
download = ["google-api-python-client>=2.179.0"]
wiki = ["pwiki>=1.3.1"]
igdb = ["igdb-api-v4>=0.3.3", "rauth>=0.7.3"]

[dependency-groups]
dev = ["pyright>=1.1.404", "ruff>=0.12.10"]
